--- a/sirius-domain/pom.xml
+++ b/sirius-domain/pom.xml
@@ -22,5 +22,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+      <groupId>com.opensource</groupId>
+      <artifactId>sirius-common</artifactId>
+      <version>${pom.version}</version>
+    </dependency>
   </dependencies>
 </project>
