--- a/sirius-web/pom.xml
+++ b/sirius-web/pom.xml
@@ -26,10 +26,17 @@
       <groupId>com.opensource</groupId>
       <artifactId>sirius-core</artifactId>
       <version>${pom.version}</version>
-      <scope>test</scope>
     </dependency>
+    <dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-core</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+	</dependency>
   </dependencies>
   <build>
-    <finalName>sirius-web</finalName>
+    <finalName>sirius-server</finalName>
   </build>
 </project>
