--- a/sirius-web/src/main/webapp/WEB-INF/web.xml
+++ b/sirius-web/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,8 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+    http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
   <display-name>Archetype Created Web Application</display-name>
   
   <context-param>
@@ -26,21 +26,22 @@
             <param-name>forceEncoding</param-name>  
             <param-value>true</param-value>  
         </init-param>  
+        <async-supported>true</async-supported>
 	</filter>
 	
 	<filter-mapping>
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
+	
 	<servlet>
-		<servlet-name>dispatcher</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
+		<servlet-name>async</servlet-name>
+		<servlet-class>org.sirius.controller.AsyncServlet</servlet-class>
+		<async-supported>true</async-supported>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>dispatcher</servlet-name>
-		<url-pattern>/*</url-pattern>
+		<servlet-name>async</servlet-name>
+		<url-pattern>/async</url-pattern>
 	</servlet-mapping>
 
 	<listener>
