--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,12 @@
         <artifactId>jackson-core</artifactId>
         <version>2.8.1</version>
       </dependency>
+
+      <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>fastjson</artifactId>
+        <version>1.2.21</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <modules>
